# comp26020_processor_emulator-main

comp26020_processor_emulator-main/: install_gplusplus12.sh
comp26020_processor_emulator-main/comp26020-lab2/: build_and_test.sh  emulator.h  instructions.cpp  instructions.h  to_rewrite.tx  to_rewrite.tx~  to_rewrite_files.tx
comp26020_processor_emulator-main/comp26020-lab2/data/: README.md  invalid4.txt  invalid5c.txt  state2.txt  state3.txt
comp26020_processor_emulator-main/comp26020-lab2/html/: annotated.html  classEmulator.html  classIorr-members.html  classIstr.html  classIxor.html  hierarchy.html  inherit_graph_4.map
comp26020_processor_emulator-main/comp26020-lab2/html/search/: all_7.js  classes_3.js  searchdata.js
comp26020_processor_emulator-main/comp26020-lab2/output/: print_program1.txt
comp26020_processor_emulator-main/comp26020-lab2/ref/: print_program1.txt
comp26020_processor_emulator-main/comp26020-lab2_attempt_1/: common.h  emulator.cpp  to_rewrite_files.tx~
comp26020_processor_emulator-main/comp26020-lab2_attempt_1/data/: invalid1.txt  invalid3.txt  invalid5a.txt  invalid5b.txt  invalid7.txt  invalid8.txt  invalid9.txt  state4.txt  state_breakpoints.txt
comp26020_processor_emulator-main/comp26020-lab2_attempt_1/html/: classBreakpoint-members.html  classBreakpoint.html  classIand-members.html  classIand__inherit__graph.map  classIjmp__coll__graph.map  classIjne-members.html  classIjne__coll__graph.map  classIjne__coll__graph.md5  classIldr-members.html  classIldr.html  classIldr__coll__graph.map  classIldr__coll__graph.md5  classInstructionBase.html  classInstructionBase__inherit__graph.map  classInstructionBase__inherit__graph.md5  classIorr__coll__graph.md5  classIstr-members.html  classIstr__coll__graph.map  classIstr__inherit__graph.md5  classIxor-members.html  classIxor__inherit__graph.map  classes.html  common_8h_source.html  emulator_8h_source.html  functions_func.html  functions_vars.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.md5  menudata.js  structInstructionData-members.html  structInstructionData.html  structProcessorState.html
comp26020_processor_emulator-main/comp26020-lab2_attempt_1/html/search/: all_1.js  all_10.js  all_2.js  all_4.js  all_8.js  all_a.js  classes_1.js  functions_2.js  functions_8.js  functions_a.js  functions_f.js  variables_2.js
comp26020_processor_emulator-main/comp26020-lab2_attempt_1/output/: print_program1.txt  print_program4.txt
comp26020_processor_emulator-main/comp26020-lab2_attempt_2/: CMakeLists.txt  common.h  emulator.cpp  emulator.cpp~  emulator.h  functional-tests.cpp  instructions.cpp  instructions.h
comp26020_processor_emulator-main/comp26020-lab2_attempt_2/data/: invalid6.txt  state1.txt
comp26020_processor_emulator-main/comp26020-lab2_attempt_2/html/: classIadd-members.html  classIjmp-members.html  classIjmp.html  classInstructionBase-members.html  files.html  graph_legend.html  inherit_graph_1.md5  instructions_8h_source.html  structProcessorState-members.html
comp26020_processor_emulator-main/comp26020-lab2_attempt_2/html/search/: all_9.js  all_e.js  classes_0.js  classes_2.js  functions_1.js  functions_4.js  functions_5.js  functions_d.js
comp26020_processor_emulator-main/comp26020-lab2_attempt_2/output/: print_program2.txt
comp26020_processor_emulator-main/comp26020-lab2_attempt_2/testing_output/: c_imp.tx  cplus_imp.tx  cplus_imp_2.tx
comp26020_processor_emulator-main/comp26020-lab2_original/: common.h  emulator.cpp  emulator.h  functional-tests.cpp  instructions.cpp  instructions.cpp~  instructions.h  structural-tests.cpp
comp26020_processor_emulator-main/comp26020-lab2_original/data/: invalid2.txt
comp26020_processor_emulator-main/comp26020-lab2_original/html/: classEmulator-members.html  classIadd.html  classIadd__inherit__graph.map  classIadd__inherit__graph.md5  classIand.html  classIand__inherit__graph.md5  classIjmp__inherit__graph.md5  classIjne.html  classIorr.html  classIorr__coll__graph.map  classIxor__inherit__graph.md5  functions.html  inherits.html
comp26020_processor_emulator-main/comp26020-lab2_original/html/search/: all_5.js  all_b.js  all_d.js  functions_0.js  functions_c.js
comp26020_processor_emulator-main/comp26020-lab2_original/output/: print_program1.txt  print_program3.txt
